--- a/Views/Interface/SuccessStoryButton.xaml
+++ b/Views/Interface/SuccessStoryButton.xaml
@@ -1,4 +1,4 @@
-﻿<ToggleButton x:Class="SuccessStory.Views.Interface.SuccessStoryToggleButton"
+﻿<Button x:Class="SuccessStory.Views.Interface.SuccessStoryButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,13 +6,13 @@
              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
              mc:Ignorable="d" Height="40">
 
-    <ToggleButton.Resources>
+    <Button.Resources>
         <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
-    </ToggleButton.Resources>
+    </Button.Resources>
 
-    <ToggleButton.Style>
-        <Style TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource BaseStyle}">
-            <Setter Property="Background" Value="{DynamicResource NormalBrushDark}" />
+    <Button.Style>
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource BaseStyle}">
+            <Setter Property="Background" Value="{DynamicResource ButtonBackgroundBrush}" />
             <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
             <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
             <Setter Property="BorderThickness" Value="{DynamicResource ControlBorderThickness}" />
@@ -20,32 +20,31 @@
             <Setter Property="Padding" Value="10,5,10,5" />
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ToggleButton}">
-                        <Border x:Name="Border"
-                            BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}"
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="Border" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}"
                             CornerRadius="{DynamicResource ControlCornerRadius}" Style="{DynamicResource HighlightBorder}">
                             <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                           Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" />
                         </Border>
                         <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
-                                <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" TargetName="Border" />
-                            </Trigger>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+                            <Trigger Property="IsFocused" Value="True">
                                 <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" TargetName="Border" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+                </Trigger>
+            </Style.Triggers>
         </Style>
-    </ToggleButton.Style>
+    </Button.Style>
 
     <Grid>
         <TextBlock Name="PART_ButtonIcon" Text="" FontFamily="{StaticResource font}" />
         <TextBlock Name="PART_ButtonText"  Text="{DynamicResource LOCSuccessStory}" />
     </Grid>
-</ToggleButton>
+</Button>
